--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "simple-express-app",
   "version": "1.0.0",
   "description": "A simple Node.js Express application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "express",
@@ -18,6 +18,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "mongoose": "^8.14.1",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
